unpackaged/main/default/objects/Test_Exception__c/Test_Exception__c.object-meta.xml
<CustomObject>
    <label>Test Exception</label>
    <nameField>
        <displayFormat>TEST-{0000}</displayFormat>
        <label>Test Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>