unpackaged/main/default/objects/Test_Exception__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Test Exceptions</relationshipLabel>
    <relationshipName>Test_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>