unpackaged/main/default/objects/Test_Exception__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Test Exceptions</relationshipLabel>
    <relationshipName>Test_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>