unpackaged/main/default/objects/Test_Exception__c/fields/Exception_Detail__c.field-meta.xml
<CustomField>
    <fullName>Exception_Detail__c</fullName>
    <label>Exception Detail</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>