unpackaged/main/default/objects/Test_Exception__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Snooze Test Run</fullName>
            </value>
            <value>
                <fullName>Snooze Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>