unpackaged/main/default/objects/Test_Exception__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Test Exceptions</relationshipLabel>
    <relationshipName>Test_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>