unpackaged/main/default/objects/Test_Exception__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Test Exceptions</relationshipLabel>
    <relationshipName>Test_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>