unpackaged/main/default/objects/Test_Exception__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <formula>CASE(LEFT(WhatId__c,3),
  &quot;001&quot;,&quot;Account&quot;,
  &quot;003&quot;,&quot;Contact&quot;,
  &quot;005&quot;,&quot;User&quot;,
  &quot;006&quot;,&quot;Opportunity&quot;,
  &quot;00T&quot;,&quot;Task&quot;,
  &quot;800&quot;,&quot;Contract&quot;,
  &quot;00Q&quot;,&quot;Lead&quot;,
  &quot;a0o&quot;,&quot;Business Unit&quot;,
  &quot;a0n&quot;,&quot;Retool Org&quot;,
  &quot;00U&quot;,&quot;Event&quot;,
  &quot;a0l&quot;,&quot;Implementation&quot;,
  &quot;00k&quot;,&quot;Opportunity Product&quot;,
  &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object</label>
    <type>Text</type>
</CustomField>