unpackaged/main/default/objects/Test_Exception__c/fields/Run_At_Unix_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_At_Unix_Time__c</fullName>
    <label>Run At (Unix Time)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>