unpackaged/main/default/objects/Test_Exception__c/fields/Snooze_Until__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Until__c</fullName>
    <label>Snooze Until</label>
    <type>Date</type>
</CustomField>