unpackaged/main/default/objects/Test_Exception__c/fields/Submitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Name__c</fullName>
    <label>Submitter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>