unpackaged/main/default/objects/Test_Exception__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <label>Test Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>