unpackaged/main/default/objects/Test_Exception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Name__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Error__c</columns>
    <columns>Snooze_Until__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Dataset_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>